# Build-Chatbot-For-SqlDatabase

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  app_test.py  index.md  pyproject.toml  requirements.txt
