[project]
name = "chatbot-sql-vanna"
version = "0.1.0"
description = "Chatbot SQL utilisant Python, Streamlit et Vanna LLM pour générer des requêtes SQL à partir de texte libre."
authors = [
    { name = "Souleymane Sow", email = "juleskapo93@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "Flask==3.0.2",
    "streamlit==1.31.1",
    "vanna==0.2.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.6.2",
    "black",
    "isort",
    "flake8"
]

[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
(
  /(
      \.git
    | \.venv
    | venv
    | build
    | dist
    | data
    | .*\.parquet
    | .*\.pdf
    | .*\.md
    | __pycache__
    | .*\.pyc
    | .*\.PNG
    | .*\.sqlite
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
skip = ["venv", ".venv", "build", "dist", "Chinook.sqlite", "README.md","__pycache__", ".PNG", ".SQLITE3"]


[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203",  # whitespace before ':'
    "W503"   # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
    "Chinook.sqlite",
    "README.md"
]

[tool.pre-commit]
# Pas de configuration directe ici, mais pre-commit utilisera .pre-commit-config.yaml
